FCT Script pour création et insertion complet

--- a/ProjetFinal_2147037/ProjetFinal_2147037.csproj
+++ b/ProjetFinal_2147037/ProjetFinal_2147037.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Views\Shared\" />
+    <Folder Include="Sql_Scripts\" />
   </ItemGroup>
 
   <ItemGroup>
